[gd_scene load_steps=13 format=3 uid="uid://cabek1j1g0gq0"]

[ext_resource type="Texture2D" uid="uid://dfvcg3q625ofn" path="res://assets/BetterAssets/Sprite sheet for Basic Pack.png" id="1_i7dhl"]
[ext_resource type="FontFile" uid="uid://416ud3q5w3yy" path="res://Sigmar_One/SigmarOne-Regular.ttf" id="1_nh1v6"]
[ext_resource type="Script" uid="uid://c0til5sh8pda7" path="res://menu.gd" id="1_plyxl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_plyxl"]
texture = ExtResource("1_i7dhl")
region_rect = Rect2(163, 178, 90, 27)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j02rv"]
texture = ExtResource("1_i7dhl")
region_rect = Rect2(259, 180, 90, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dhu8p"]
texture = ExtResource("1_i7dhl")
region_rect = Rect2(837, 100, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xujxf"]
texture = ExtResource("1_i7dhl")
region_rect = Rect2(869, 102, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bxl7t"]
texture = ExtResource("1_i7dhl")
region_rect = Rect2(276, 18, 7, 12)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jpqux"]
texture = ExtResource("1_i7dhl")
region_rect = Rect2(292, 18, 7, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_plyxl"]
atlas = ExtResource("1_i7dhl")
region = Rect2(59, 107, 26, 26)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ur68"]
texture = ExtResource("1_i7dhl")
region_rect = Rect2(277, 2, 7, 12)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xwm5o"]
texture = ExtResource("1_i7dhl")
region_rect = Rect2(293, 2, 7, 12)

[node name="HomeUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="MarginContainer" parent="." node_paths=PackedStringArray("menuScreen")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_plyxl")
menuScreen = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
size_flags_vertical = 8
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="MarginContainer" type="MarginContainer" parent="Menu/VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/VBoxContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Top" type="Button" parent="Menu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.79800856, 0.14977178, 2.9744804e-05, 1)
theme_override_fonts/font = ExtResource("1_nh1v6")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxTexture_plyxl")
theme_override_styles/pressed = SubResource("StyleBoxTexture_j02rv")
theme_override_styles/hover = SubResource("StyleBoxTexture_j02rv")
text = "Play
"
icon_alignment = 1

[node name="Middle" type="Button" parent="Menu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.79800856, 0.14977178, 2.9744804e-05, 1)
theme_override_fonts/font = ExtResource("1_nh1v6")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxTexture_plyxl")
theme_override_styles/pressed = SubResource("StyleBoxTexture_j02rv")
theme_override_styles/hover = SubResource("StyleBoxTexture_j02rv")
text = "Store
"
icon_alignment = 1

[node name="Bottom" type="Button" parent="Menu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.79800856, 0.14977178, 2.9744804e-05, 1)
theme_override_fonts/font = ExtResource("1_nh1v6")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxTexture_plyxl")
theme_override_styles/pressed = SubResource("StyleBoxTexture_j02rv")
theme_override_styles/hover = SubResource("StyleBoxTexture_j02rv")
text = "Settings
"

[node name="StoreMenu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 800
theme_override_constants/margin_bottom = 100

[node name="NinePatchRect" type="NinePatchRect" parent="StoreMenu"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_i7dhl")
region_rect = Rect2(59, 59, 26, 26)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Title" type="HBoxContainer" parent="StoreMenu"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 30

[node name="Control" type="Control" parent="StoreMenu/Title"]
layout_mode = 2

[node name="Shop" type="Label" parent="StoreMenu/Title"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.79800856, 0.14977178, 2.9744804e-05, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_nh1v6")
theme_override_font_sizes/font_size = 60
text = "Shop"
vertical_alignment = 1

[node name="exitButton" type="HBoxContainer" parent="StoreMenu"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="StoreMenu/exitButton"]
layout_mode = 2
theme_override_constants/margin_top = -15
theme_override_constants/margin_right = -15

[node name="Button" type="Button" parent="StoreMenu/exitButton/MarginContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_dhu8p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xujxf")
theme_override_styles/hover = SubResource("StyleBoxTexture_xujxf")

[node name="MarginContainer" type="MarginContainer" parent="StoreMenu"]
layout_mode = 2
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="StoreMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="left" type="Button" parent="StoreMenu/MarginContainer/HBoxContainer3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_bxl7t")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jpqux")
theme_override_styles/hover = SubResource("StyleBoxTexture_jpqux")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_jpqux")

[node name="ColorRect" type="ColorRect" parent="StoreMenu/MarginContainer/HBoxContainer3"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.8627451, 0.7254902, 0.5411765, 1)

[node name="Sprite2D" type="Sprite2D" parent="StoreMenu/MarginContainer/HBoxContainer3"]
visible = false
position = Vector2(247.5, 326)
scale = Vector2(8, 8)
texture = SubResource("AtlasTexture_plyxl")

[node name="VBoxContainer" type="VBoxContainer" parent="StoreMenu/MarginContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Name" type="Label" parent="StoreMenu/MarginContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.79800856, 0.14977178, 2.9744804e-05, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_nh1v6")
theme_override_font_sizes/font_size = 50
text = "Name"

[node name="Descript" type="Label" parent="StoreMenu/MarginContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.79800856, 0.14977178, 2.9744804e-05, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_nh1v6")
theme_override_font_sizes/font_size = 50
text = "Description"

[node name="Button" type="Button" parent="StoreMenu/MarginContainer/HBoxContainer3/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 4

[node name="left2" type="Button" parent="StoreMenu/MarginContainer/HBoxContainer3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_8ur68")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xwm5o")
theme_override_styles/hover = SubResource("StyleBoxTexture_xwm5o")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_xwm5o")

[connection signal="pressed" from="Menu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer/Top" to="Menu" method="_on_top_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/NinePatchRect/MarginContainer/VBoxContainer/Middle" to="Menu" method="_on_middle_pressed"]
[connection signal="pressed" from="StoreMenu/exitButton/MarginContainer/Button" to="Menu" method="_on_button_pressed"]
